# git_mcp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  install.sh  main.py  pyproject.toml  test_mr_description.py
.claude/commands/: README.md  doc.md  implement.md  issue.md  pr.md  release.md  test.md
.github/workflows/: ci.yml  claude-code-review.yml  release.yml  test.yml
git_mcp/: __init__.py  cli.py  mcp_server.py
git_mcp/claude_commands/: README.md  __init__.py  doc.md  implement.md  issue.md  plan.md  pr.md  test.md
git_mcp/codex_commands/: README.md  __init__.py  doc.md  implement.md  issue.md  plan.md  pr.md  test.md
git_mcp/commands/: __init__.py  agent.py  issue.py  mr.py  project.py
git_mcp/core/: config.py  logging.py
git_mcp/gemini_commands/: __init__.py  doc.toml  implement.toml  issue.toml  plan.toml  pr.toml  test.toml
git_mcp/gitlab_ci_templates/: __init__.py  claude-code-review.gitlab-ci.yml  claude.gitlab-ci.yml
git_mcp/services/: __init__.py  agent_service.py  platform_service.py
git_mcp/utils/: __init__.py  output.py  platform.py
git_mpc/: __init__.py  cli.py
git_mpc/commands/: __init__.py  issue.py  mr.py  project.py
git_mpc/core/: __init__.py  config.py  exceptions.py
git_mpc/utils/: __init__.py  output.py
tests/: README.md  test_codex_integration.py  test_comment_functionality.py  test_live_comment_integration.py  test_live_mr_integration.py  test_logging.py  test_mr_functionality.py  test_mr_lifecycle_integration.py
