[project]
name = "git_mcp_server"
version = "0.2.2"
description = "Git MCP Server - Unified command-line tool for managing Git repositories across GitHub and GitLab"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-gitlab>=4.4.0",
    "PyGithub>=2.1.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.5.0",
    "httpx>=0.26.0",
    "keyring>=24.0.0",
    "gitpython>=3.1.0",
    "pyyaml>=6.0.0",
    "mcp[cli]>=1.0.0",
    "tool>=0.8.0",
    "pre-commit>=4.2.0",
    "tomli-w>=1.0.0",
    "tomli>=2.0.0; python_version<'3.11'",
]

[project.scripts]
git-mcp = "git_mcp.cli:main"
git-mcp-server = "git_mcp.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["git_mcp"]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "coverage>=7.0.0",
    "ruff>=0.1.0",
    "bandit[toml]>=1.7.0",
    "pip-audit>=2.0.0",
]

[tool.bandit]
# Skip subprocess warnings - our usage is safe (only calls 'claude' CLI)
skips = ["B404", "B603", "B607"]

[dependency-groups]
dev = [
    "build>=1.3.0",
    "mypy>=1.17.1",
]
